# Neural-Nestworks-from-scracth

./: .gitignore
LSTM-new-main/MultyLayerPerceptron/: MultyLayerPerceptron.vcxproj  main.cpp
LSTM-new-main/MultyLayerPerceptron/lstm/: lstm-builder.h  lstm.cpp  lstm.h
LSTM-new-main/MultyLayerPerceptron/mlp/: activation-functions.cpp  activation-functions.h  layer.cpp  layer.h  mlp-builder.cpp  multy-layer-perceptron.cpp
LSTM-new-main/MultyLayerPerceptron/utils/: basic-includes.h  lstmUtils.cpp  lstmUtils.h
Long-Short-Term-Memory/MultyLayerPerceptron/: MultyLayerPerceptron.vcxproj  MultyLayerPerceptron.vcxproj.filters  main.cpp
Long-Short-Term-Memory/MultyLayerPerceptron/lstm/: lstm-builder.cpp  lstm.cpp  lstm.h
Long-Short-Term-Memory/MultyLayerPerceptron/mlp/: activation-functions.h  layer.cpp  layer.h  lost-function.cpp  mlp-builder.h  multy-layer-perceptron.cpp  multy-layer-perceptron.h  neuron.cpp  neuron.h
Long-Short-Term-Memory/MultyLayerPerceptron/utils/: utils.cpp  utils.h
MLP-batch/MultyLayerPerceptron/: MultyLayerPerceptron.vcxproj  MultyLayerPerceptron.vcxproj.filters  basic-includes.h
MLP-batch/MultyLayerPerceptron/01-interfaces/: IActivationFunction.h  ILayer.h  ILossFunction.h  IOptimizationLayer.h
MLP-batch/MultyLayerPerceptron/02-Dense-Layer/: DataManager.cpp  DataManager.h  DenseLayer.cpp  DenseLayer.h
MLP-batch/MultyLayerPerceptron/03-Activation-Function/: ActivationFunction.cpp  ActivationFunction.h  ReLU.cpp  ReLU.h  Sigmoid.cpp  Sigmoid.h  Softmax.cpp  Softmax.h  Tanh.cpp  Tanh.h
MLP-batch/MultyLayerPerceptron/04-MLP/: MLP.cpp  MLP.h
MLP-batch/MultyLayerPerceptron/05-Loss-Function/: LossFunctions.cpp  LossFunctions.h
MLP-batch/MultyLayerPerceptron/06-Managers/: DataManager.cpp  DataManager.h  LayerManager.cpp  LayerManager.h
MLP-batch/MultyLayerPerceptron/07-Builder/: MLPbuilder.cpp  MLPbuilder.h
MLP-batch/MultyLayerPerceptron/08-Optimizers/: BatchNorm.cpp  BatchNorm.h  DropOut.cpp  DropOut.h  Optimizers.h
MLP-batch/MultyLayerPerceptron/main-project/: DataLoader.cpp  DataLoader.h  GnuplotWrapper.cpp  GnuplotWrapper.h  comparations.cpp  comparations.h  main.cpp
MLP-matrix/: MultyLayerPerceptron.sln
MLP-matrix/MultyLayerPerceptron/: MultyLayerPerceptron.vcxproj  MultyLayerPerceptron.vcxproj.filters  main.cpp
MLP-matrix/MultyLayerPerceptron/cnn/: ConvolutionCell.h  cnn.h  data-maneging.h
MLP-matrix/MultyLayerPerceptron/mlp/: activation-functions.cpp  layer.cpp  layer.h  mlp-builder.cpp  mlp-builder.h  multy-layer-perceptron.cpp  neuron.cpp  neuron.h
MLP-matrix/MultyLayerPerceptron/utils/: basic-includes.h  lstmUtils.cpp  lstmUtils.h
MultyLayerPerceptron/MultyLayerPerceptron/: MultyLayerPerceptron.vcxproj.filters  main.cpp
MultyLayerPerceptron/MultyLayerPerceptron/mlp/: activation-functions.h  layer.cpp  layer.h  mlp-builder.cpp  multy-layer-perceptron.cpp  multy-layer-perceptron.h  neuron.cpp  neuron.h
MultyLayerPerceptron/MultyLayerPerceptron/utils/: basic-includes.h  utils.cpp  utils.h
Transformer/MultyLayerPerceptron/: MultyLayerPerceptron.vcxproj  MultyLayerPerceptron.vcxproj.filters  TransformerBuilder.cpp  TransformerBuilder.h  main.cpp
Transformer/MultyLayerPerceptron/tansformer/Decoder/: Decoder.cpp  Decoder.h
Transformer/MultyLayerPerceptron/tansformer/Encoder/: Encoder-Embeding.cpp  Encoder-Embeding.h  Encoder.cpp  Encoder.h
Transformer/MultyLayerPerceptron/tansformer/Encoder-Decoder-Transformer/: Encoder-Decoder-Transformer.cpp  Encoder-Decoder-Transformer.h
Transformer/MultyLayerPerceptron/tansformer/Multy-Head-Attention/: Attention-Head.cpp  Attention-Head.h  Multy-Head-Attention.cpp  Multy-Head-Attention.h
Transformer/MultyLayerPerceptron/tansformer/Scalled-Dot-Product-Attention/: Scaled-Dot-Product-Attention.h
Transformer/MultyLayerPerceptron/tansformer/add-norm/: Add-Norm.cpp  Add-Norm.h
Transformer/MultyLayerPerceptron/tansformer/feed-forward/mlp/: activation-functions.h  layer.cpp
Transformer/MultyLayerPerceptron/utils/: basic-includes.h  utils.cpp  utils.h
Transformer/enc_temp_folder/82c6d65760090cebac0865f54e82445/: main.cpp
convolutional-neural-network - Copia/: CMakeLists.txt
convolutional-neural-network - Copia/MultyLayerPerceptron/: CMakeLists.txt  main.cpp
convolutional-neural-network - Copia/MultyLayerPerceptron/cnn/: ActivationCell.h  CNNbuilder.h  ConvolutionCell.cpp  ConvolutionCell.h  ProcessingUnity.h  cnn.h  data-maneging.cpp  data-maneging.h  layer-normalization.h
convolutional-neural-network - Copia/MultyLayerPerceptron/mlp/: activation-functions.h
convolutional-neural-network/MultyLayerPerceptron/: MultyLayerPerceptron.vcxproj  MultyLayerPerceptron.vcxproj.filters  main.cpp
convolutional-neural-network/MultyLayerPerceptron/cnn/: ActivationCell.cpp  CNNbuilder.cpp  CNNbuilder.h  ConvolutionCell.cpp  ConvolutionCell.h  ProcessingUnity.h  cnn.cpp  cnn.h  data-maneging.cpp  layer-normalization.cpp  pooling.cpp  pooling.h
convolutional-neural-network/MultyLayerPerceptron/mlp/: activation-functions.cpp  activation-functions.h  layer.cpp  layer.h  lost-function.cpp  mlp-builder.cpp  mlp-builder.h  multy-layer-perceptron.cpp  multy-layer-perceptron.h
convolutional-neural-network/MultyLayerPerceptron/utils/: utils.cpp  utils.h
multy-filter-cnn/MultyLayerPerceptron/: MultyLayerPerceptron.vcxproj  MultyLayerPerceptron.vcxproj.filters  main.cpp
multy-filter-cnn/MultyLayerPerceptron/cnn/: ActivationCell.cpp  ActivationCell.h  ConvolutionCell.cpp  ConvolutionCell.h  Flat.cpp  Flat.h  ProcessingUnity.h  data-maneging.cpp  data-maneging.h
multy-filter-cnn/MultyLayerPerceptron/mlp/: multy-layer-perceptron.h
multy-filter-cnn/MultyLayerPerceptron/utils/: basic-includes.h  utils.cpp  utils.h
